--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express-validator": "^7.0.1",
     "express-winston": "^4.2.0",
     "helmet": "^7.1.0",
+    "https-proxy-agent": "^7.0.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
@@ -57,6 +58,7 @@
     "nodemailer": "^6.9.7",
     "sharp": "^0.32.6",
     "socket.io": "^4.7.4",
+    "socks-proxy-agent": "^8.0.5",
     "validator": "^13.11.0",
     "winston": "^3.11.0",
     "yup": "^1.3.3"
