--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "bitgo": "^50.23.0",
     "ccxt": "^4.5.32",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
